--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist-ssr
 *.local
 
 .env.*
+.env
+.env.local
+.env.development.local
+.env.test.local
 
 # Editor directories and files
 .vscode/*
